# Scanner-Server

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  check.sh  ci.sh  config.txt  constants.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  scanner_server.py  test-requirements.in  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: autodeps.yml  ci.yml  codeql.yml  tests.yml
scripts/: cert_create.sh  cert_renew.sh
src/sanescansrv/: __init__.py  elapsed.py  generate_pages.py  htmlgen.py  logger.py  server.py  server_utils.py
src/sanescansrv/static/: style.css
src/sanescansrv/templates/: base.html.jinja  error_page.html.jinja  root_get.html.jinja  scan-status_get.html.jinja  scanners_get.html.jinja  settings.html.jinja  settings_get.html.jinja
tests/: scanner_profiles.json  test_elapsed.py  test_htmlgen.py  test_import.py  test_server_utils.py
tools/: mypy_annotate.py  project_requirements.py
