[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sanescansrv"
version = "2.1.3"
authors = [
  { name="CoolCat467" },
]
description = "Scanner Web Server - Website to talk to SANE scanners."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["scanner", "sane", "server", "frontend"]
dependencies = [
    "hypercorn[trio]~=0.14.3",
    "Pillow~=10.0.0",
    "python-sane~=2.9.1",
    "quart~=0.18.4",
    "quart-trio~=0.10.0",
    "trio~=0.22.0",
    "Werkzeug~=2.3.3"
]

[project.optional-dependencies]
dev = [
    "mypy~=1.5.0",              # must match .pre-commit-config.yaml
    "pre-commit",
    "pre-commit-hooks~=4.4.0",  # must match .pre-commit-config.yaml
    "tox~=4.8.0",
    # "async_generator~=1.10",
    # "trio-typing[mypy]~=0.8.0",
]
tests = [
    "pytest~=7.4.0",
    "pytest-cov~=4.1.0",
    "pytest-trio~=0.8.0",
]

[project.urls]
"Homepage" = "https://github.com/CoolCat467/Scanner-Server"
"Source" = "https://github.com/CoolCat467/Scanner-Server"
"Bug Tracker" = "https://github.com/CoolCat467/Scanner-Server/issues"

[project.scripts]
sanescansrv = "sanescansrv:run"

[tool.setuptools.package-data]
sanescansrv = ["py.typed", "templates/*", "static/*"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=sanescansrv"
testpaths = [
    "tests",
]

[tool.mypy]
# plugins = ["trio_typing.plugin"]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py38']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

select = ['A', 'B', 'C4', 'COM', 'CPY', 'D', 'E', 'EXE', 'F', 'FA', 'I', 'N', 'PIE', 'PT', 'PYI', 'Q', 'RET', 'RUF', 'S', 'SIM', 'SLOT', 'UP', 'YTT']
ignore = [
    "D211",  # conflicts with docstrings
    "D213",  # conflicts with docstrings
    "E203",  # conflicts with black
    "E402",  # module level import not at top of file
    "E501",  # conflicts with black
    "S101",  # use of assert for tests and type narrowing
    "D203",
    "D401",  # Imparative mood docstrings
]

fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = ["D203"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"src/sanescansrv/htmlgen.py" = [
    "D417",  # Bugged "Missing argument descriptions" even though they are there
]
"tests/*" = [
    "D100",  # no module docstring
    "D103",  # no docstrings
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py39, py311, pytest, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.9: py39, pytest
        3.11: py311, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
        # trio-typing[mypy]
        # async_generator
    commands = mypy src
"""
