[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "sanescansrv"
dynamic = ["version"]
authors = [
  { name="CoolCat467", email="CoolCat467@duck.com" },
]
description = "Scanner Web Server - Website to talk to SANE scanners."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Framework :: Trio",
    "Typing :: Typed",
]
keywords = ["scanner", "sane", "server", "frontend"]
dependencies = [
    "hypercorn[trio]~=0.15.0",
    "Pillow~=10.1.0",
    "python-sane~=2.9.1",
    "quart~=0.19.4",
    "quart-trio~=0.11.1",
    "trio~=0.23.2",
    "Werkzeug~=3.0.1",
    'exceptiongroup >= 1.2.0; python_version < "3.11"',
]

[tool.setuptools.dynamic]
version = {attr = "sanescansrv.server.__version__"}

[project.urls]
"Homepage" = "https://github.com/CoolCat467/Scanner-Server"
"Source" = "https://github.com/CoolCat467/Scanner-Server"
"Bug Tracker" = "https://github.com/CoolCat467/Scanner-Server/issues"

[project.scripts]
sanescansrv = "sanescansrv:run"

[tool.setuptools.package-data]
sanescansrv = ["py.typed", "templates/*", "static/*"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.black]
line-length = 120  # Will not raise errors if too big, see below.
target-version = ['py39']

[tool.ruff]
line-length = 120  # I don't care about line length a whole lot, just that it's not TOO big.
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "I",     # isort
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
##    "E501",  # line-too-long
    "S101",  # use of assert for tests and type narrowing
    "D203",  # blank line thing
    "D204",  # blank line thing
    "D211",  # no-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.per-file-ignores]
"src/sanescansrv/htmlgen.py" = [
    "D417",  # Bugged "Missing argument descriptions" even though they are there
]
"tests/*" = [
    "D100",  # undocumented-public-module
    "D103",  # undocumented-public-function
    "E501",  # line too long
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=sanescansrv"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "__init__.py",
    "generate_pages.py",
]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py39, py310, py311, py312, pytest, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.9: py39, pytest
        3.10: py310, pytest
        3.11: py311, pytest
        3.12: py312, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
